Wed Jul  6 08:11:07 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/EventLogFactory_i.cpp (create_with_id):
        * orbsvcs/orbsvcs/Log/NotifyLogFactory_i.cpp (create_with_id):
        * orbsvcs/orbsvcs/Log/RTEventLogFactory_i.cpp (create_with_id):

	  Fix cut-n-pasto introduced in:
	  Tue Jul  5 18:01:04 2005  J.T. Conklin  <jtc@acorntoolworks.com>

Wed Jul  6 15:44:16 2005  Simon McQueen  <sm@prismtech.com>

        * tao/IIOP_Connection_Handler.cpp (open):

          Set server side sockets to be non-blocking even if the
          client connection policy is blocking. This fixes bugzilla
          #2183.

        * tests/Bug_2183_Regression/Bug_2183_Regression.mpc:
        * tests/Bug_2183_Regression/Hello.cpp:
        * tests/Bug_2183_Regression/Hello.h:
        * tests/Bug_2183_Regression/README:
        * tests/Bug_2183_Regression/Test.idl:
        * tests/Bug_2183_Regression/client.cpp:
        * tests/Bug_2183_Regression/hang_client.pl:
        * tests/Bug_2183_Regression/run_test.pl:
        * tests/Bug_2183_Regression/server.conf:
        * tests/Bug_2183_Regression/server.cpp:

          Added regression test for the above.

Wed Jul  6 09:47:47 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Service.cpp:
        * orbsvcs/orbsvcs/Notify/CosNotify_Service.cpp:
        * orbsvcs/orbsvcs/Notify/Event.inl:
        * orbsvcs/orbsvcs/Notify/Notify_Constraint_Visitors.cpp:
        * orbsvcs/orbsvcs/Notify/Reactive_Task.h:
        * orbsvcs/orbsvcs/Notify/Reactive_Task.cpp:
        * orbsvcs/tests/Notify/lib/Notify_Test_Client.h:

          Fix misc problems with exception macros.
          Fix problem with renamed init() method.
          Fix problem with use of ACE_Thread_Mutex instead of TAO_SYNCH_MUTEX.

Tue Jul  5 18:01:04 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/BasicLogFactory_i.cpp (create_with_id):